performance test: use typescript

--- a/test/performance/test.html
+++ b/test/performance/test.html
@@ -15,7 +15,7 @@
       mocha.setup({ ui: 'bdd' });
     </script>
     <script type="module">
-      const modules = import.meta.globEager('/src/**/*.test.{js,jsx}');
+      const modules = import.meta.globEager('/src/**/*.test.{ts,tsx}');
     </script>
   </body>
 </html>
